# claude-profiles

./: .gitignore  .release-please-manifest.json  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json  turbo.json  vite.config.ts
.github/workflows/: ci.yml  release-please.yml  release.yml
apps/claude-profiles/: CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/claude-profiles/src/: app.tsx
apps/claude-profiles/src-tauri/: Cargo.toml  tauri.conf.json
apps/claude-profiles/src-tauri/capabilities/: desktop.json
apps/claude-profiles/src-tauri/src/: app_state.rs  commands.rs  deps.rs  error.rs  launch.rs  lib.rs  main.rs  migration.rs  path_setup.rs  profiles.rs  test_support.rs
apps/claude-profiles/src-tauri/src/launchers/: gui.rs  icons.rs  mod.rs  script.rs
apps/claude-profiles/src-tauri/src/usage/: credentials.rs  mod.rs  quota.rs  refresh.rs
apps/claude-profiles/src/components/: README.md
apps/claude-profiles/src/design/: boundary.test.ts  index.css  index.ts
apps/claude-profiles/src/lib/: colors.ts  commands.ts  extract-error-message.test.ts  extract-error-message.ts  format-bytes.test.ts  format-bytes.ts  types.ts
apps/claude-profiles/src/test/: setup.ts
apps/landing/: .env.example  .gitignore  astro.config.mjs  package.json
apps/landing/public/: robots.txt
apps/landing/src/components/: app-screenshot.astro  cookie-banner.tsx  faq-section.astro  finder-mockup.astro  footer.astro  hero.astro  how-it-works.astro  install-section.astro  migration-explainer.astro  profile-pill.astro  terminal-strip.astro  top-bar.astro
apps/landing/src/data/: faq.ts
apps/landing/src/layouts/: page.astro
scripts/: revert-migration.sh
src/: app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: activity.rs  commands.rs  lib.rs  main.rs  migration.rs  paths.rs  profiles.rs  slug.rs
src-tauri/src/launchers/: cli.rs  mod.rs  plist.rs
src/components/: color-swatch-picker.tsx  create-profile-modal.test.tsx  create-profile-modal.tsx  deep-link-info.test.tsx  deep-link-info.tsx  delete-profile-dialog.test.tsx  delete-profile-dialog.tsx  edit-profile-modal.test.tsx  edit-profile-modal.tsx  empty-state.tsx  migration-dialog.tsx  path-setup-banner.tsx  profile-detail.tsx  profile-list.tsx  settings-view.test.tsx  settings-view.tsx  sidebar.tsx  surface-card.tsx  welcome-dialog.test.tsx  welcome-dialog.tsx
src/components/profile-detail/: skeleton.tsx
src/components/settings-view/: skeleton.tsx
src/components/sidebar/: skeleton.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx  label.tsx  popover.tsx
src/design/: index.css  index.ts
src/design/primitives/: dialog.tsx  kbd.tsx  skeleton.tsx  toast.tsx
src/hooks/: use-app-state.test.ts  use-app-state.ts  use-dependencies.test.ts  use-dependencies.ts  use-migration-backups.test.ts  use-migration-backups.ts  use-migration.test.ts  use-profiles.test.ts  use-profiles.ts
src/lib/: colors.test.ts  colors.ts  commands.ts  format-bytes.ts  types.ts
src/lib/query/: keys.ts  provider.tsx
src/test/: render-with-query.tsx
(+150 files in other folders)
