[package]
name = "claude-profiles"
version = "0.1.0"
description = "Run multiple Claude accounts on one Mac, each with its own isolated Desktop launcher and CLI wrapper."
authors = ["Bartek Czyż <bartek@czyz.it>"]
repository = "https://github.com/bartekczyz/claude-profiles"
license = "MIT"
homepage = "https://czyz.it?utm_source=claude-profiles"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_profiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
icns = "0.4.0"
plist = "1.9.0"
trash = "5.2.6"
tauri-plugin-clipboard-manager = "2"

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

